--- a/google/index.html
+++ b/google/index.html
@@ -25,56 +25,61 @@
       <div class="row">
         <nav class="col-md-3 d-none d-md-block bg-light sidebar">
           <div class="sidebar-sticky">
+            <h5>Seach Options</h5>
             <div class="boxSearch">
-              <p>
-                <a class="btn btn-primary" data-toggle="collapse" href="#cellSearch" role="button" aria-expanded="false" aria-controls="cellSearch">
-                  Cell Tower Search
-                </a>
-              </p>
+              <div class="row">
+                <div class="boxHeader">
+                  <h6 class="header-collapse" data-toggle="collapse" href="#cellSearch" role="button" aria-expanded="false" aria-controls="cellSearch">
+                    Cell Tower Search
+                  </h6>
+                </div>
+              </div>
               <div class="collapse" id="cellSearch">
                 <div class="card card-body">
                   <form>
                     <div class="form-group">
-                      <label for="cellId">Cell ID</label>
+                      <!-- <label for="cellId">Cell ID</label> -->
                       <input type="number" class="form-control" id="cellId" placeholder="Cell Identifier">
                     </div>
                     <div class="form-group">
-                      <label for="lac">LAC</label>
+                      <!-- <label for="lac">LAC</label> -->
                       <input type="number" class="form-control" id="lac" placeholder="Location Area Code">
                     </div>
                     <div class="form-group">
-                      <label for="mcc">MCC</label>
+                      <!-- <label for="mcc">MCC</label> -->
                       <input type="number" class="form-control" id="mcc" placeholder="Mobile Country Code">
                     </div>
                     <div class="form-group">
-                      <label for="mnc">MNC</label>
+                      <!-- <label for="mnc">MNC</label> -->
                       <input type="number" class="form-control" id="mnc" placeholder="Mobile Network Code">
                     </div>
-                    <button type="submit" class="btn btn-primary mb-2" id="cellTowerSearch">Find It</button>
+                    <button type="submit" class="btn btn-success mb-2 btn-sm" id="cellTowerSearch">Find It</button>
                   </form>
                 </div>
               </div>
             </div>
 
             <div class="boxSearch">
-              <p>
-                <a class="btn btn-primary" data-toggle="collapse" href="#routerSearch" role="button" aria-expanded="false" aria-controls="routerSearch">
-                  WiFi Access Points Search
-                </a>
-              </p>
+              <div class="row">
+                <div class="boxHeader">
+                  <h6 class="header-collapse" data-toggle="collapse" href="#routerSearch" role="button" aria-expanded="false" aria-controls="routerSearch">
+                    WiFi Access Points Search
+                  </h6>
+                </div>
+              </div>
 
               <div class="collapse" id="routerSearch">
                 <div class="card card-body">
                   <form>
                     <div class="form-group">
-                      <label for="macOne">WAP MAC Address</label>
+                      <!-- <label for="macOne">WAP MAC Address</label> -->
                       <input type="text" class="form-control" id="macOne" placeholder="MAC Address">
                     </div>
                     <div class="form-group">
-                      <label for="macTwo">WAP MAC Address II</label>
+                      <!-- <label for="macTwo">WAP MAC Address II</label> -->
                       <input type="text" class="form-control" id="macTwo" placeholder="MAC Address">
                     </div>
-                    <button type="submit" class="btn btn-primary mb-2" id="WiFiSearch">Find it</button>
+                    <button type="submit" class="btn btn-success mb-2 btn-sm" id="WiFiSearch">Find it</button>
                   </form>
                 </div>
               </div>
@@ -83,7 +88,7 @@
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-9 pt-3 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Search Display</h1>
+            <h5 class="h5">Search Display</h5>
           </div>
           <div id="map"></div>
         </main>
