--- a/google/index.html
+++ b/google/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="geolocation" ng-controller="MainCtrl">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -14,83 +14,95 @@
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
       <a class="navbar-brand col-sm-3 col-md-3 mr-0" href="#">Geolocation</a>
-      <!-- <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign out</a>
-        </li>
-      </ul> -->
     </nav>
     <div class="container-fluid">
       <div class="row">
-        <nav class="col-md-3 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <h5>Seach Options</h5>
-            <div class="boxSearch">
-              <div class="row">
-                <div class="boxHeader">
-                  <h6 class="header-collapse" data-toggle="collapse" href="#cellSearch" role="button" aria-expanded="false" aria-controls="cellSearch">
-                    Cell Tower Search
-                  </h6>
-                </div>
-              </div>
-              <div class="collapse" id="cellSearch">
-                <div class="card card-body">
-                  <form>
-                    <div class="form-group">
-                      <!-- <label for="cellId">Cell ID</label> -->
-                      <input type="number" class="form-control" id="cellId" placeholder="Cell Identifier">
-                    </div>
-                    <div class="form-group">
-                      <!-- <label for="lac">LAC</label> -->
-                      <input type="number" class="form-control" id="lac" placeholder="Location Area Code">
-                    </div>
-                    <div class="form-group">
-                      <!-- <label for="mcc">MCC</label> -->
-                      <input type="number" class="form-control" id="mcc" placeholder="Mobile Country Code">
-                    </div>
-                    <div class="form-group">
-                      <!-- <label for="mnc">MNC</label> -->
-                      <input type="number" class="form-control" id="mnc" placeholder="Mobile Network Code">
-                    </div>
-                    <button type="submit" class="btn btn-success mb-2 btn-sm" id="cellTowerSearch">Find It</button>
-                  </form>
-                </div>
-              </div>
+        <main role="main" class="col-md-12 ml-sm-auto col-lg-12 pt-3 px-4">
+          <div class="row pb-2 mb-3 border-bottom">
+            <div class="col-md-6 col-lg-6">
+              <h5 class="h5">Search Display</h5>
             </div>
 
-            <div class="boxSearch">
-              <div class="row">
-                <div class="boxHeader">
-                  <h6 class="header-collapse" data-toggle="collapse" href="#routerSearch" role="button" aria-expanded="false" aria-controls="routerSearch">
-                    WiFi Access Points Search
-                  </h6>
-                </div>
-              </div>
-
-              <div class="collapse" id="routerSearch">
-                <div class="card card-body">
-                  <form>
-                    <div class="form-group">
-                      <!-- <label for="macOne">WAP MAC Address</label> -->
-                      <input type="text" class="form-control" id="macOne" placeholder="MAC Address">
-                    </div>
-                    <div class="form-group">
-                      <!-- <label for="macTwo">WAP MAC Address II</label> -->
-                      <input type="text" class="form-control" id="macTwo" placeholder="MAC Address">
-                    </div>
-                    <button type="submit" class="btn btn-success mb-2 btn-sm" id="WiFiSearch">Find it</button>
-                  </form>
-                </div>
-              </div>
+            <div class="col-md-6 col-lg-6">
+              <a class="btn btn-success btn-sm modal-button text-right" data-toggle="modal" data-target="#cellSearch" href="#cellSearch" role="button" aria-expanded="false" aria-controls="cellSearch">
+                Cell Tower Search
+              </a>
             </div>
-          </div>
-        </nav>
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-9 pt-3 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h5 class="h5">Search Display</h5>
+
           </div>
           <div id="map"></div>
+
+          <!-- Modal -->
+          <div class="modal fade" id="cellSearch" tabindex="-1" role="dialog" aria-labelledby="cellSearch" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+
+                <div class="modal-body">
+                  <div class="card card-body">
+                    <form>
+                      <form>
+                        <div class="form-row">
+                          <div class="form-group col">
+                            <label for="inputPassword4">MNC</label>
+                          </div>
+                          <div class="form-group col">
+                            <label for="inputEmail4">MCC</label>
+                          </div>
+                          <div class="form-group col">
+                            <label for="inputPassword4">LAC</label>
+                          </div>
+                          <div class="form-group col">
+                            <label for="inputEmail4">Cell ID</label>
+                          </div>
+                          <div class="form-group col">
+                            <label for="inputEmail4">RSSI</label>
+                          </div>
+                          <div class="form-group col">
+                            <label for="inputPassword4"></label>
+                          </div>
+                        </div>
+
+                        <div class="form-row" data-ng-repeat="cell in cells track by cell.id">
+                          <div class="form-group col">
+                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].mobileNetworkCode" id="mnc" placeholder="Mobile Network Code">
+                          </div>
+                          <div class="form-group col">
+                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].mobileCountryCode" cellTowersid="mcc" placeholder="Mobile Country Code">
+                          </div>
+                          <div class="form-group col">
+                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].locationAreaCode" name=""id="lac" placeholder="Location Area Code">
+                          </div>
+                          <div class="form-group col">
+                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].cellId" id="cellId" placeholder="Cell Identifier">
+                          </div>
+                          <div class="form-group col">
+                            <input type="text" class="form-control" ng-model="cell.cellTowers[0].signalStrength" name=""id="rssi" placeholder="Signal Strength">
+                          </div>
+
+                          <div class="form-group col">
+                            <button class="btn btn-danger" ng-click="removeCell(cell.id)" ng-if="cell.id!=index">-</button>
+                            <button class="btn btn-danger" ng-click="addNewCell()" ng-if="cell.id===index">+</button>
+                          </div>
+                        </div>
+
+                      <button type="submit" ng-click="cellTowerSearch()" class="btn btn-success mb-2 btn-sm">Search</button>
+
+                    </form>
+                  </div>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
         </main>
       </div>
     </div>
@@ -100,6 +112,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js" type="text/javascript"></script>
+
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2wUY1ac__wzokjdZ3DPa4EW17etVIyAc&callback=initMap" type="text/javascript"></script> -->
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?callback=initMap">
