--- a/google/index.html
+++ b/google/index.html
@@ -31,6 +31,10 @@
               <a class="btn btn-success btn-sm modal-button text-right" data-toggle="modal" data-target="#enterCoordinates" href="#enterCoordinates" role="button" aria-expanded="false" aria-controls="enterCoordinates">
                 Enter Coordinates
               </a>
+
+              <a class="btn btn-success btn-sm modal-button text-right" data-toggle="modal" data-target="#macSearch" href="#macSearch" role="button" aria-expanded="false" aria-controls="macSearch">
+                WAP Search
+              </a>
             </div>
 
           </div>
@@ -41,7 +45,7 @@
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Cell Tower Search</h5>
+                  <h5 class="modal-title" id="cellTower">Cell Tower Search</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -89,8 +93,7 @@
                           </div>
 
                           <div class="form-group col">
-                            <button class="btn btn-danger" ng-click="removeCell(cell.id)" ng-if="cell.id!=index">-</button>
-                            <button class="btn btn-danger" ng-click="addNewCell()" ng-if="cell.id===index">+</button>
+                            <button class="btn btn-danger" ng-click="removeCell(cell.id)">-</button>
                           </div>
                         </div>
 
@@ -123,23 +126,21 @@
                     <form>
                         <div class="form-row">
                           <div class="form-group col">
-                            <label for="inputPassword4">Latitude</label>
+                            <label for="coordinates">Latitude, Longitude</label>
                           </div>
+
                           <div class="form-group col">
-                            <label for="inputEmail4">Longitude</label>
-                          </div>
-                          <div class="form-group col">
-                            <label for="inputPassword4">Radius</label>
+                            <label for="radius">Radius</label>
                           </div>
                         </div>
 
                         <div class="form-row">
                           <div class="form-group col">
-                            <input type="text" class="form-control" ng-model="coord.latitude" placeholder="Latitude" required>
+                            <input type="text" class="form-control" ng-model="coord.details" placeholder="Latitude, Longitude" required>
                           </div>
-                          <div class="form-group col">
+                          <!-- <div class="form-group col">
                             <input type="text" class="form-control" ng-model="coord.longitude" placeholder="Longitude" required>
-                          </div>
+                          </div> -->
                           <div class="form-group col">
                             <input type="text" class="form-control" ng-model="coord.radius" placeholder="Radius" required>
                           </div>
@@ -147,6 +148,52 @@
 
                       <button class="btn btn-success mb-2 btn-sm" ng-click="placeCoordinates()">Place Marker</button>
                     </form>
+                  </div>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="modal fade" id="macSearch" tabindex="-1" role="dialog" aria-labelledby="macSearch" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="macSearch">WiFi Access Point Search</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+
+                <div class="modal-body">
+                  <div class="card card-body">
+                    <form>
+                        <div class="form-row">
+                          <div class="form-group col">
+                            <label for="mac1">MAC Address 1</label>
+                          </div>
+
+                          <div class="form-group col">
+                            <label for="mac2">MAC Address 2</label>
+                          </div>
+                        </div>
+
+                        <div class="form-row">
+                          <div class="form-group col">
+                            <input type="text" class="form-control" ng-model="wapDetails.macAddressOne" placeholder="MAC Address 2" required>
+                          </div>
+                          <div class="form-group col">
+                            <input type="text" class="form-control" ng-model="wapDetails.macAddressTwo" placeholder="MAC Address 2" required>
+                          </div>
+                        </div>
+
+                      <button class="btn btn-success mb-2 btn-sm" ng-click="wapSearch()">Place Marker</button>
+                    </form>
+
+                    {{ wapDetails }}
                   </div>
                 </div>
                 <!-- <div class="modal-footer">
@@ -167,10 +214,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js" type="text/javascript"></script>
 
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2wUY1ac__wzokjdZ3DPa4EW17etVIyAc&callback=initMap" type="text/javascript"></script> -->
-    <script async defer
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD72XGkolbzqHdVS3JE3WgPtfU7h8zVb4E&callback=initMap" type="text/javascript"></script>
+    <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?callback=initMap">
-    </script>
+    </script> -->
 
     <script src="./index.js" type="text/javascript"></script>
   </body>
