--- a/google/index.html
+++ b/google/index.html
@@ -101,10 +101,6 @@
                       <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewCell()">Add Cell</button>
                     </form>
 
-                    <!-- <div id="choicesDisplay">
-                    {{ cells }}
-                    </div> -->
-
                   </div>
                 </div>
               </div>
@@ -146,7 +142,7 @@
                           </div>
                         </div>
 
-                      <button class="btn btn-success mb-2 btn-sm" ng-click="placeCoordinates()">Place Marker</button>
+                      <button class="btn btn-success mb-2 btn-sm" ng-click="placeCoordinates(coord)">Place Marker</button>
                     </form>
                   </div>
                 </div>
@@ -201,7 +197,7 @@
                       <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewWap()">Add Cell</button>
                     </form>
 
-                    {{ waps }}
+                    <!-- {{ waps }} -->
                   </div>
                 </div>
                 <!-- <div class="modal-footer">
@@ -222,10 +218,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js" type="text/javascript"></script>
 
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD72XGkolbzqHdVS3JE3WgPtfU7h8zVb4E&callback=initMap" type="text/javascript"></script> -->
-    <script async defer
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD72XGkolbzqHdVS3JE3WgPtfU7h8zVb4E&callback=initMap" type="text/javascript"></script>
+    <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?callback=initMap">
-    </script>
+    </script> -->
 
     <script src="./index.js" type="text/javascript"></script>
   </body>
