--- a/google/index.html
+++ b/google/index.html
@@ -77,16 +77,16 @@
 
                         <div class="form-row" data-ng-repeat="cell in cells track by cell.id">
                           <div class="form-group col">
-                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].mobileNetworkCode" id="mnc" placeholder="Mobile Network Code">
+                            <input type="text" class="form-control" ng-model="cell.cellTowers[0].mobileNetworkCode" id="mnc" placeholder="Mobile Network Code">
                           </div>
                           <div class="form-group col">
-                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].mobileCountryCode" cellTowersid="mcc" placeholder="Mobile Country Code">
+                            <input type="text" class="form-control" ng-model="cell.cellTowers[0].mobileCountryCode" cellTowersid="mcc" placeholder="Mobile Country Code">
                           </div>
                           <div class="form-group col">
-                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].locationAreaCode" name=""id="lac" placeholder="Location Area Code">
+                            <input type="text" class="form-control" ng-model="cell.cellTowers[0].locationAreaCode" name=""id="lac" placeholder="Location Area Code">
                           </div>
                           <div class="form-group col">
-                            <input type="number" class="form-control" ng-model="cell.cellTowers[0].cellId" id="cellId" placeholder="Cell Identifier">
+                            <input type="text" class="form-control" ng-model="cell.cellTowers[0].cellId" id="cellId" placeholder="Cell Identifier">
                           </div>
                           <div class="form-group col">
                             <input type="text" class="form-control" ng-model="cell.cellTowers[0].signalStrength" name=""id="rssi" placeholder="Signal Strength">
