--- a/google/index.html
+++ b/google/index.html
@@ -77,7 +77,7 @@
 
                         <div class="form-row" data-ng-repeat="cell in cells track by cell.id">
                           <div class="form-group col">
-                            <input type="text" class="form-control" ng-model="cell.cellTowers[0].mobileCountryCode" cellTowersid="mcc" placeholder="Mobile Country Code">
+                            <input type="text" class="form-control" ng-model="cell.cellTowers[0].mobileCountryCode" cellTowersid="mcc">
                           </div>
                           <div class="form-group col">
                             <input type="text" class="form-control" ng-model="cell.cellTowers[0].mobileNetworkCode" id="mnc" placeholder="Mobile Network Code">
