--- a/google/index.html
+++ b/google/index.html
@@ -19,11 +19,11 @@
       <div class="row">
         <main role="main" class="col-md-12 ml-sm-auto col-lg-12 pt-3 px-4">
           <div class="row pb-2 mb-3 border-bottom">
-            <div class="col-md-6 col-lg-6">
+            <div class="col-md-4 col-lg-4">
               <h5 class="h5">Search Display</h5>
             </div>
 
-            <div class="col-md-6 col-lg-6">
+            <div class="col-md-8 col-lg-8">
               <a class="btn btn-success btn-sm modal-button text-right" data-toggle="modal" data-target="#cellSearch" href="#cellSearch" role="button" aria-expanded="false" aria-controls="cellSearch">
                 Cell Tower Search
               </a>
@@ -34,6 +34,10 @@
 
               <a class="btn btn-success btn-sm modal-button text-right" data-toggle="modal" data-target="#macSearch" href="#macSearch" role="button" aria-expanded="false" aria-controls="macSearch">
                 WAP Search
+              </a>
+
+              <a class="btn btn-success btn-sm modal-button text-right" title="WIFI mac adress using API from mylnikov" data-toggle="modal" data-target="#wifiSearch" href="#wifiSearch" role="button" aria-expanded="false" aria-controls="wifiSearch">
+                MAC Address Search
               </a>
             </div>
 
@@ -146,10 +150,6 @@
                     </form>
                   </div>
                 </div>
-                <!-- <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div> -->
               </div>
             </div>
           </div>
@@ -196,17 +196,61 @@
                       <button class="btn btn-success mb-2 btn-sm" ng-click="wapSearch()">Locate WAPS</button>
                       <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewWap()">Add Cell</button>
                     </form>
-
-                    <!-- {{ waps }} -->
                   </div>
                 </div>
-                <!-- <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div> -->
               </div>
             </div>
           </div>
+
+          <div class="modal fade" id="wifiSearch" tabindex="-1" role="dialog" aria-labelledby="wifiSearch" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" title="WIFI mac adress using API from mylnikov" id="wifiSearch">WiFi MAC Address Search</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+
+                <div class="modal-body">
+                  <div class="card card-body">
+
+                    <form>
+                        <div class="form-row">
+                          <div class="form-group col-md-5">
+                            <label for="inputPassword4">MAC</label>
+                          </div>
+                          <div class="form-group col-md-5">
+                            <label for="inputEmail4">RSSI</label>
+                          </div>
+                          <div class="form-group col-md-2">
+                            <label for="inputPassword4"></label>
+                          </div>
+                        </div>
+
+                        <div class="form-row" data-ng-repeat="mac in macs track by mac.id">
+                          <div class="form-group col-md-5">
+                            <input type="text" class="form-control" ng-model="mac.address">
+                          </div>
+                          <div class="form-group col-md-5">
+                            <input type="text" class="form-control" ng-model="mac.signalStrength">
+                          </div>
+
+                          <div class="form-group col-md-2">
+                            <button class="btn btn-danger" ng-click="removeMac(mac.id)">-</button>
+                          </div>
+                        </div>
+
+                      <button class="btn btn-success mb-2 btn-sm" ng-click="macSearch()">Locate WAPS</button>
+                      <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewMac()">Add Cell</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </main>
       </div>
     </div>
@@ -218,10 +262,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js" type="text/javascript"></script>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD72XGkolbzqHdVS3JE3WgPtfU7h8zVb4E&callback=initMap" type="text/javascript"></script>
-    <!-- <script async defer
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD72XGkolbzqHdVS3JE3WgPtfU7h8zVb4E&callback=initMap" type="text/javascript"></script> -->
+    <script async defer
     src="https://maps.googleapis.com/maps/api/js?callback=initMap">
-    </script> -->
+    </script>
 
     <script src="./index.js" type="text/javascript"></script>
   </body>
