--- a/google/index.html
+++ b/google/index.html
@@ -262,10 +262,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js" type="text/javascript"></script>
 
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD72XGkolbzqHdVS3JE3WgPtfU7h8zVb4E&callback=initMap" type="text/javascript"></script> -->
-    <script async defer
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD72XGkolbzqHdVS3JE3WgPtfU7h8zVb4E&callback=initMap" type="text/javascript"></script>
+    <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?callback=initMap">
-    </script>
+    </script> -->
 
     <script src="./index.js" type="text/javascript"></script>
   </body>
