modified the new search

--- a/google/index.html
+++ b/google/index.html
@@ -182,7 +182,7 @@
 
                         <div class="form-row" data-ng-repeat="wap in waps track by wap.id">
                           <div class="form-group col">
-                            <input type="text" class="form-control" ng-model="wap.macAddress">
+                            <input type="text" class="form-control" ng-model="wap.address">
                           </div>
                           <div class="form-group col">
                             <input type="text" class="form-control" ng-model="wap.signalStrength">
