--- a/google/index.html
+++ b/google/index.html
@@ -194,7 +194,7 @@
                         </div>
 
                       <button class="btn btn-success mb-2 btn-sm" ng-click="wapSearch()">Locate WAPS</button>
-                      <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewWap()">Add Cell</button>
+                      <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewWap()">Add MAC</button>
                     </form>
                   </div>
                 </div>
@@ -242,7 +242,7 @@
                         </div>
 
                       <button class="btn btn-success mb-2 btn-sm" ng-click="macSearch()">Locate WAPS</button>
-                      <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewMac()">Add Cell</button>
+                      <button class="btn btn-primary mb-2 btn-sm float-right" ng-click="addNewMac()">Add MAC</button>
                     </form>
                   </div>
                 </div>
